--- a/05MVC/NoteTakingApp/NoteTakingApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/05MVC/NoteTakingApp/NoteTakingApp.WebApp/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Note" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Note" asp-action="Index">Notes</a>
                         </li>
                     </ul>
                 </div>
